@@ -202,7 +202,7 @@ public class ClientRunner extends Thread {
 		Integer tries = taskRunnerRetryHashMap.get(key);
 		logger.debug("try to find integer: " + tries);
 		if (tries == null) {
-			tries = new Integer(1);
+			tries = Integer.valueOf(1);
 		} else {
 			tries = tries + 1;
 		}
@@ -510,7 +510,7 @@ public class ClientRunner extends Thread {
 			localChannelReference.sessionNewState(R66FiniteDualStates.REQUESTR);
 			try {
 				ChannelUtils.writeAbstractLocalPacket(localChannelReference,
-						request, false);
+						request, true);
 			} catch (OpenR66ProtocolPacketException e) {
 				// propose to redo
 				logger.warn("Cannot transfer request to " + host.toString());
@@ -547,7 +547,7 @@ public class ClientRunner extends Thread {
 		localChannelReference.sessionNewState(R66FiniteDualStates.REQUESTR);
 		try {
 			ChannelUtils.writeAbstractLocalPacket(localChannelReference,
-					request, false);
+					request, true);
 		} catch (OpenR66ProtocolPacketException e) {
 			// propose to redo
 			logger.warn("Cannot transfer request to " + host.toString());
